Add bottom margin to profile page
So that content is not hidden by the footer.

--- a/changed/templates/changed/profile.html
+++ b/changed/templates/changed/profile.html
@@ -10,7 +10,7 @@
 
 <body class="d-flex flex-column min-vh-100">
     <div class="wrapper flex-grow-1">
-        <div class="container">
+        <div class="container" style="margin-bottom:60px">
             <div class="text-center" style="margin:2vh">
                 <h3>{{user.username}}'s Reviews</h3>
             </div>
