--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -56,7 +56,7 @@
                     <div class="card" style="width:70vw; background-color: #f5f5f5;">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1" style="color:black"></h5>
-                            <small style="color:#3d3d3d">{{r.user.username}}</small>
+                            <small style="color:#3d3d3d; margin-right:10px">{{r.user.username}}</small>
                         </div>
                         <div class="card-body">
                             <p class="mb-1" style="color:#3d3d3d">{{r.body}}</p>
