--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -67,20 +67,19 @@
             {% endfor %}
 
             <div class="card" style="width:70vw; margin:2vh">
-                <form action="{% url 'changed:replies' id=comment.id %}" , method="post" style="margin-bottom:50px">
-                    {% csrf_token %}
-                    <div class="form-control">
-                        <div class="fieldWrapper">
-                            {{ form.reply.errors }}
-                            {{ form.reply.label_tag }}
-                            {{ form.reply }}
-                        </div>
-                        <br />
-                        <button type="submit" , value="submit" , class="btn btn-secondary">
-                            Submit
-                        </button>
-                    </div>
-                </form>
+            <form action="{% url 'changed:replies' id=comment.id %}" , method="post" style="margin-bottom:50px">
+                <div class="form-group"> 
+                    {% csrf_token %} 
+                <h5 class="mb-1" style="color:black">Reply</h5>
+                 
+                  <div class="fieldWrapper" style="width:70vw; background-color: #f5f5f5;">
+                    {{ form.reply.errors }}
+                    {{ form.reply }}
+                </div> 
+                  <small id="emailHelp" class="form-text text-muted">Fill in your response above!!.</small>
+                </div>
+                <button type="submit", value = "submit", class="btn btn-primary">Submit</button>
+              </form>
             </div>
         </div>
     </div>
