adding image to about page

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -16,4 +16,10 @@
 
     What's Changed is a work programmed by five University of Virginia Students for a CS 3240 project. These students include Esther Chung, Diana Damenova, Brendan Pulju, David Tran, and Naqia Zaveri. The Django framework was used for the backend, Bootstrap 4 was used for front end work, Postgres was used for database services, Google's API was used for the map feature, Travis was used for integration testing, and Heroku was used for deployment. 
 </body>
+<br>
+<div class="text-center">
+    <img src="cville.jpg" class="rounded" alt="...">
+  </div>
+</div>
+
 {% endblock %}
