--- a/changed/templates/changed/comments.html
+++ b/changed/templates/changed/comments.html
@@ -7,6 +7,7 @@
 
     <h2 class="text-center">{{business_name}}</h2>
     <h5 class="text-center">COVID Guideline Reviews</h5>
+    <h5 class="text-center">Average COVID Compliance Rating: {{business.average_rating}}</h5>
     {% for comment in business_info %}
     <div class="container">
         <div class="row justify-content-md-center">
@@ -18,6 +19,7 @@
                             {{comment.covid_compliance_rating}}
                         </h5>
                         <small>{{comment.user.username}}</small>
+                        <small>{{comment.published_date}}</small>
                     </div>
                     <p class="mb-1">
                         indoor dining:
