Update about page formatting

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -8,27 +8,42 @@
 </head>
 
 <body>
-    <h2 class="d-flex justify-content-center">About What's Changed?</h2>
+    <h2 class="d-flex justify-content-center" style="margin-top:2vh">About "What's Changed?"</h2>
+    <div class=container style="width:80vw">
+        <p>
+            Like many places, the COVID-19 pandemic has had an immense impact on the local community of Charlottesville,
+            VA.
+            What's Changed was created to track and understand the changes that COVID-19 has inflicted onto businesses
+            in
+            the
+            area. Serving as a one stop shop for understanding everything COVID-related to a business. This includes
+            information
+            regarding outdoor seating, COVID protocol ratings, maximum capacity, etc. In addition, users can submit
+            their
+            own
+            reviews and commentary regarding certain businesses. Now more than ever, local communities must be connected
+            with
+            one another to support one another. Use What's Changed to do your part and help your local community.
+        </p>
 
-    Like many places, the COVID-19 pandemic has had an immense impact on the local community of Charlottesville, VA.
-    What's Changed was created to track and understand the changes that COVID-19 has inflicted onto businesses in the
-    area. Serving as a one stop shop for understanding everything COVID-related to a business. This includes information
-    regarding outdoor seating, COVID protocol ratings, maximum capacity, etc. In addition, users can submit their own
-    reviews and commentary regarding certain businesses. Now more than ever, local communities must be connected with
-    one another to support one another. Use What's Changed to do your part and help your local community.
-    <br>
-    <br>
-
-    What's Changed is a work programmed by five University of Virginia Students for a CS 3240 project. These students
-    include Esther Chung, Diana Damenova, Brendan Pulju, David Tran, and Naqia Zaveri. The Django framework was used for
-    the backend, Bootstrap 4 was used for front end work, Postgres was used for database services, Google's API was used
-    for the map feature, Travis was used for integration testing, and Heroku was used for deployment.
+        <p>
+            What's Changed is a work programmed by five University of Virginia Students for a CS 3240 project. These
+            students
+            include Esther Chung, Diana Damenova, Brendan Pulju, David Tran, and Naqia Zaveri. The Django framework was
+            used
+            for
+            the backend, Bootstrap 4 was used for front end work, Postgres was used for database services, Google's API
+            was
+            used
+            for the map feature, Travis was used for integration testing, and Heroku was used for deployment.
+        </p>
+    </div>
+    <div class="text-center">
+        <img src="https://live.staticflickr.com/65535/51112523640_592d56bfbf_c.jpg" class="rounded" alt="..."
+            style="margin:1vh; margin-bottom:60px">
+    </div>
+    </div>
 </body>
-<br>
-<div class="text-center">
-    <img src="https://live.staticflickr.com/65535/51112523640_592d56bfbf_c.jpg" class="rounded" alt="..."
-        style="margin:1vh; margin-bottom:60px">
-</div>
-</div>
+
 
 {% endblock %}
