--- a/changed/templates/changed/comments.html
+++ b/changed/templates/changed/comments.html
@@ -4,24 +4,29 @@
 <!--Content goes here-->
 
 <body>
+    <div style="margin-bottom:2vh">
+        <h2 class="text-center">{{business_name}}</h2>
+        <h5 class="text-center">Average COVID Compliance Rating: {{business.average_rating}}</h5>
+        <div class="text-center">
+            <small style="color:#5d7fa3">Click on a review to read and write comments.</small>
+        </div>
+    </div>
 
-    <h2 class="text-center">{{business_name}}</h2>
-    <h5 class="text-center">COVID Guideline Reviews</h5>
-    <h5 class="text-center">Average COVID Compliance Rating: {{business.average_rating}}</h5>
     {% for comment in business_info %}
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="list-group" style="width:70vw">
-                <a href="{% url 'changed:replies' id=comment.id %}" class="list-group-item list-group-item-action" aria-current="false">
+                <a href="{% url 'changed:replies' id=comment.id %}" class="list-group-item list-group-item-action"
+                    aria-current="false">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1" style="color:black">
-                            <u> Covid Compliance Rating:</u>
+                            Covid Compliance Rating:
                             {{comment.covid_compliance_rating}}
                         </h5>
                         <small>{{comment.user.username}}</small>
                         <small>{{comment.published_date}}</small>
                     </div>
-                    <p class="mb-1">
+                    <p class="mb-1" style="color:#5d7fa3">
                         indoor dining:
                         {%if comment.indoor_dining == True %}
                         &#10003;
@@ -35,7 +40,7 @@
                         &#10007;
                         {% endif %}
                     </p>
-                    <p class="mb-1">
+                    <p class="mb-1" style="color:#5d7fa3">
                         curbside pickup:
                         {%if comment.curbside_pickup == True %}
                         &#10003;
@@ -49,7 +54,7 @@
                         &#10007;
                         {% endif %}
                     </p>
-                    <p class="mb-1">capacity limit: {{comment.capacity_limit}}</p>
+                    <p class="mb-1" style="color:#5d7fa3">capacity limit: {{comment.capacity_limit}}</p>
                     <hr>
                     <p class="mb-1" style="color:black">{{comment.body}}</p>
                 </a>
