--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -11,12 +11,13 @@
                 <div class="d-flex w-100 justify-content-between">
                     <div class="card-body">
                         <h5 class="mb-1" style="color:black">
-                            <u> Covid Compliance Rating:</u>
+                            Covid Compliance Rating:
                             {{comment.covid_compliance_rating}}
                         </h5>
-                        <small>{{comment.user.username}}</small>
+                        <small>{{comment.user.username}}, on </small>
                         <small>{{comment.published_date}}</small>
-                        <p class="mb-1">
+                        <hr>
+                        <p class="mb-1" style="color:#5d7fa3">
                             indoor dining:
                             {%if comment.indoor_dining == True %}
                             &#10003;
@@ -30,7 +31,7 @@
                             &#10007;
                             {% endif %}
                         </p>
-                        <p class="mb-1">
+                        <p class="mb-1" style="color:#5d7fa3">
                             curbside pickup:
                             {%if comment.curbside_pickup == True %}
                             &#10003;
@@ -44,7 +45,7 @@
                             &#10007;
                             {% endif %}
                         </p>
-                        <p class="mb-1">capacity limit: {{comment.capacity_limit}}</p>
+                        <p class="mb-1" style="color:#5d7fa3">capacity limit: {{comment.capacity_limit}}</p>
                         <hr>
                         <p class="mb-1" style="color:black">{{comment.body}}</p>
                     </div>
@@ -55,8 +56,8 @@
             <div class="container">
                 <div class="row justify-content-md-center">
                     <div class="card" style="width:70vw; background-color: #f5f5f5;">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1" style="color:black"></h5>
+                        <div class="card-header d-flex w-100 justify-content-between"
+                            style="background-color: #f5f5f5;">
                             <small style="color:#3d3d3d; margin-right:10px">{{r.user.username}}</small>
                             <small style="color:#3d3d3d; margin-right:10px">{{r.published_date}}</small>
                         </div>
@@ -68,20 +69,23 @@
             </div>
             {% endfor %}
 
-            <div class="card" style="width:70vw; margin:2vh">
-            <form action="{% url 'changed:replies' id=comment.id %}" , method="post" style="margin-bottom:50px">
-                <div class="form-group"> 
-                    {% csrf_token %} 
-                <h5 class="mb-1" style="color:black">Reply</h5>
-                 
-                  <div class="fieldWrapper" style="width:70vw; background-color: #f5f5f5;">
-                    {{ form.reply.errors }}
-                    {{ form.reply }}
-                </div> 
-                  <small id="emailHelp" class="form-text text-muted">Fill in your response above!!.</small>
-                </div>
-                <button type="submit", value = "submit", class="btn btn-primary">Submit</button>
-              </form>
+            <div class="card justify-content-md-center text-center"
+                style="width:70vw; margin-top:2vh; margin-bottom:60px">
+                <form action="{% url 'changed:replies' id=comment.id %}" , method="post">
+                    <div class="form-group">
+                        {% csrf_token %}
+                        <h5 class="card-header" style="background-color:#5d7fa3; color:white">Reply</h5>
+                        <div class="card-body">
+                            <div class="fieldWrapper" style="width:70vw;">
+                                {{ form.reply.errors }}
+                                {{ form.reply }}
+                            </div>
+                            <small id="emailHelp" class="form-text text-muted">Write your reply above!</small>
+                        </div>
+                        <button type="submit" , value="submit" , class="btn"
+                            style="background-color: #5d7fa3; color:white">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
