--- a/changed/templates/changed/base_html.html
+++ b/changed/templates/changed/base_html.html
@@ -15,21 +15,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'changed:index' %}">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'changed:about' %}">About<span class="sr-only">(current)</span></a>
                 </li>
                 {% if user.is_authenticated %}
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="{% url 'changed:logout' %}">
                         Logout<span class="sr-only">(current)</span>
                     </a>
                 </li>
 
                 {% else %}
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="{% url 'changed:index' %}">Login<span class="sr-only">(current)</span></a>
                 </li>
                 {% endif %}
@@ -39,7 +39,7 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <div style="margin-right:5px">
-                    <a style="color:white" class="nav-link" href="{% url 'changed:profile' username=user.username %}">
+                    <a class="nav-link" href="{% url 'changed:profile' username=user.username %}">
                         {{user.username}} <span class="sr-only">(current)</span>
                     </a>
                 </div>
