Show COVID Compliance Rating

--- a/changed/templates/changed/base_html.html
+++ b/changed/templates/changed/base_html.html
@@ -4,7 +4,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #5d7fa3;">
     <div class="container-fluid">
-        <a class="navbar-brand" style="color:white">
+        <a class="navbar-brand" style="color:white" href="{% url 'changed:index' %}">
             <img src="https://live.staticflickr.com/65535/50999956205_de401b87c1_o.png" width="30" height="30"
                 class="d-inline-block align-top">
             What's Changed?
