--- a/changed/templates/changed/comments.html
+++ b/changed/templates/changed/comments.html
@@ -6,7 +6,7 @@
 <body>
     <div style="margin-bottom:2vh">
         <h2 class="text-center">{{business_name}}</h2>
-        <h5 class="text-center">Average COVID Compliance Rating: {{business.average_rating}}</h5>
+        <h5 class="text-center">Average COVID Compliance Rating: {{avg_rating}}</h5>
         <div class="text-center">
             <small style="color:#5d7fa3">Click on a review to read and write comments.</small>
         </div>
