Added Edit and Delete Buttons to Replies

--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -64,6 +64,10 @@
                         <div class="card-body">
                             <p class="mb-1" style="color:#3d3d3d">{{r.body}}</p>
                         </div>
+                         <div style="text-align: center;">
+                            <a href="#" class="btn btn-info" role="button"style="background-color: #5d7fa3; color:white"> Delete</a>
+                            <a href="#" class="btn btn-info" role="button"style="background-color: #5d7fa3; color:white"> Edit</a>
+                        </div>
                     </div>
                 </div>
             </div>
