Added Edit and Delete Buttons to comments page

--- a/changed/templates/changed/comments.html
+++ b/changed/templates/changed/comments.html
@@ -57,6 +57,10 @@
                         <p class="mb-1" style="color:#5d7fa3">capacity limit: {{comment.capacity_limit}}</p>
                         <hr>
                         <p class="mb-1" style="color:black">{{comment.body}}</p>
+                        <div style="text-align: center;">
+                            <a href="#" class="btn btn-info" role="button"style="background-color: #5d7fa3; color:white"> Delete</a>
+                            <a href="#" class="btn btn-info" role="button"style="background-color: #5d7fa3; color:white"> Edit</a>
+                        </div>
                     </a>
 
                 </div>
